--- a/requirements.txt
+++ b/requirements.txt
@@ -1,175 +1,151 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-absl-py=1.0.0=pypi_0
-appnope=0.1.2=py39h2804cbe_2
-argon2-cffi=21.3.0=pyhd8ed1ab_0
-argon2-cffi-bindings=21.2.0=py39h5161555_1
-asttokens=2.0.5=pyhd8ed1ab_0
-astunparse=1.6.3=pypi_0
-attrs=21.4.0=pyhd8ed1ab_0
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-black=22.1.0=pypi_0
-bleach=4.1.0=pyhd8ed1ab_0
-bzip2=1.0.8=h3422bc3_4
-c-ares=1.18.1=h3422bc3_0
-ca-certificates=2021.10.8=h4653dfc_0
-cached-property=1.5.2=hd8ed1ab_1
-cached_property=1.5.2=pyha770c72_1
-cachetools=5.0.0=pypi_0
-certifi=2021.10.8=pypi_0
-cffi=1.15.0=py39h52b1de0_0
-charset-normalizer=2.0.12=pypi_0
-click=8.0.4=pypi_0
-cycler=0.11.0=pypi_0
-debugpy=1.5.1=py39hfb83b0d_0
-decorator=5.1.1=pyhd8ed1ab_0
-defusedxml=0.7.1=pyhd8ed1ab_0
-dill=0.3.4=pypi_0
-entrypoints=0.4=pyhd8ed1ab_0
-executing=0.8.3=pyhd8ed1ab_0
-flatbuffers=2.0=pypi_0
-flit-core=3.7.1=pyhd8ed1ab_0
-fonttools=4.31.2=pypi_0
-gast=0.5.3=pypi_0
-google-auth=2.6.0=pypi_0
-google-auth-oauthlib=0.4.6=pypi_0
-google-pasta=0.2.0=pypi_0
-googleapis-common-protos=1.55.0=pypi_0
-grpcio=1.44.0=py39h18b86b0_0
-h5py=3.6.0=nompi_py39hd982b79_100
-hdf5=1.12.1=nompi_hd9dbc9e_104
-idna=3.3=pypi_0
-importlib-metadata=4.11.2=py39h2804cbe_0
-importlib_resources=5.4.0=pyhd8ed1ab_0
-ipykernel=6.9.1=py39h32adebf_0
-ipython=8.1.1=py39h2804cbe_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.6.5=pyhd8ed1ab_0
-jedi=0.18.1=py39h2804cbe_0
-jinja2=3.0.3=pyhd8ed1ab_0
-joblib=1.1.0=pypi_0
-jsonschema=4.4.0=pyhd8ed1ab_0
-jupyter=1.0.0=py39h2804cbe_7
-jupyter_client=7.1.2=pyhd8ed1ab_0
-jupyter_console=6.4.3=pyhd8ed1ab_0
-jupyter_core=4.9.2=py39h2804cbe_0
-jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-jupyterlab_widgets=1.0.2=pyhd8ed1ab_0
-keras=2.8.0=pypi_0
-keras-preprocessing=1.1.2=pypi_0
-kiwisolver=1.4.1=pypi_0
-krb5=1.19.2=he492e65_4
-libblas=3.9.0=13_osxarm64_openblas
-libcblas=3.9.0=13_osxarm64_openblas
-libclang=13.0.0=pypi_0
-libcurl=7.82.0=h9476f53_0
-libcxx=12.0.1=h168391b_1
-libedit=3.1.20191231=hc8eb9b7_2
-libev=4.33=h642e427_1
-libffi=3.4.2=h3422bc3_5
-libgfortran=5.0.0.dev0=11_0_1_hf114ba7_23
-libgfortran5=11.0.1.dev0=hf114ba7_23
-liblapack=3.9.0=13_osxarm64_openblas
-libnghttp2=1.47.0=hf30690b_0
-libopenblas=0.3.18=openmp_h5dd58f0_0
-libsodium=1.0.18=h27ca646_1
-libssh2=1.10.0=h7a5bd25_2
-libzlib=1.2.11=hee7b306_1013
-llvm-openmp=13.0.1=h455960f_1
-mahotas=1.4.11=pypi_0
-markdown=3.3.6=pypi_0
-markupsafe=2.1.0=py39hb18efdd_1
-matplotlib=3.5.1=pypi_0
-matplotlib-inline=0.1.3=pyhd8ed1ab_0
-mistune=0.8.4=py39h5161555_1005
-mypy-extensions=0.4.3=pypi_0
-nbclient=0.5.12=pyhd8ed1ab_0
-nbconvert=6.4.2=py39h2804cbe_0
-nbformat=5.1.3=pyhd8ed1ab_0
-ncurses=6.3=hc470f4d_0
-nest-asyncio=1.5.4=pyhd8ed1ab_0
-notebook=6.4.8=pyha770c72_0
-numpy=1.21.5=py39h47fb9ce_0
-oauthlib=3.2.0=pypi_0
-opencv-python=4.5.5.64=pypi_0
-openssl=3.0.0=h3422bc3_2
-opt-einsum=3.3.0=pypi_0
-packaging=21.3=pyhd8ed1ab_0
-pandas=1.4.1=py39h7f752ed_0
-pandocfilters=1.5.0=pyhd8ed1ab_0
-parso=0.8.3=pyhd8ed1ab_0
-pathspec=0.9.0=pypi_0
-pexpect=4.8.0=pyh9f0ad1d_2
-pickleshare=0.7.5=py_1003
-pillow=9.0.1=pypi_0
-pip=22.0.4=pyhd8ed1ab_0
-platformdirs=2.5.1=pypi_0
-prometheus_client=0.13.1=pyhd8ed1ab_0
-promise=2.3=pypi_0
-prompt-toolkit=3.0.27=pyha770c72_0
-prompt_toolkit=3.0.27=hd8ed1ab_0
-protobuf=3.19.4=pypi_0
-ptyprocess=0.7.0=pyhd3deb0d_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.21=pyhd8ed1ab_0
-pygments=2.11.2=pyhd8ed1ab_0
-pyparsing=3.0.7=pyhd8ed1ab_0
-pyrsistent=0.18.1=py39h5161555_0
-python=3.9.10=h38ef502_2_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python-levenshtein=0.12.2=pypi_0
-python_abi=3.9=2_cp39
-pytz=2021.3=pyhd8ed1ab_0
-pywavelets=1.3.0=pypi_0
-pyzmq=22.3.0=py39h02c6a76_1
-readline=8.1=hedafd6a_0
-requests=2.27.1=pypi_0
-requests-oauthlib=1.3.1=pypi_0
-rsa=4.8=pypi_0
-scikit-learn=1.0.2=pypi_0
-scipy=1.8.0=pypi_0
-seaborn=0.11.2=pypi_0
-send2trash=1.8.0=pyhd8ed1ab_0
-setuptools=60.9.3=py39h2804cbe_0
-six=1.15.0=pypi_0
-sqlite=3.37.0=h72a2b83_0
-stack_data=0.2.0=pyhd8ed1ab_0
-tensorboard=2.8.0=pypi_0
-tensorboard-data-server=0.6.1=pypi_0
-tensorboard-plugin-wit=1.8.1=pypi_0
-tensorflow-addons=0.16.1=pypi_0
-tensorflow-datasets=4.5.2=pypi_0
-tensorflow-deps=2.8.0=0
-tensorflow-macos=2.8.0=pypi_0
-tensorflow-metadata=1.7.0=pypi_0
-tensorflow-metal=0.4.0=pypi_0
-termcolor=1.1.0=pypi_0
-terminado=0.13.3=py39h2804cbe_0
-testpath=0.6.0=pyhd8ed1ab_0
-tf-estimator-nightly=2.8.0.dev2021122109=pypi_0
-threadpoolctl=3.1.0=pypi_0
-tk=8.6.12=he1e0b03_0
-tomli=2.0.1=pypi_0
-torch=1.11.0=pypi_0
-tornado=6.1=py39h5161555_2
-tqdm=4.63.0=pypi_0
-traitlets=5.1.1=pyhd8ed1ab_0
-typeguard=2.13.3=pypi_0
-typing-extensions=4.1.1=pypi_0
-tzdata=2021e=he74cb21_0
-urllib3=1.26.8=pypi_0
-wcwidth=0.2.5=pyh9f0ad1d_2
-webencodings=0.5.1=py_1
-werkzeug=2.0.3=pypi_0
-wheel=0.37.1=pyhd8ed1ab_0
-widgetsnbextension=3.5.2=py39h2804cbe_1
-wrapt=1.13.3=pypi_0
-xz=5.2.5=h642e427_1
-zeromq=4.3.4=hbdafb3b_1
-zipp=3.7.0=pyhd8ed1ab_1
-zlib=1.2.11=hee7b306_1013
+absl-py==1.0.0
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+astunparse==1.6.3
+attrs==21.4.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+black==22.1.0
+bleach==4.1.0
+cached-property==1.5.2
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.4
+cloudpickle==2.0.0
+cycler==0.11.0
+cytoolz==0.11.2
+dask==2022.4.0
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.4
+entrypoints==0.4
+executing==0.8.3
+flatbuffers==2.0
+flit_core==3.7.1
+fonttools==4.31.2
+fsspec==2022.3.0
+gast==0.5.3
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+googleapis-common-protos==1.55.0
+grpcio==1.44.0
+h5py==3.6.0
+idna==3.3
+imagecodecs==2022.2.22
+imageio==2.16.1
+importlib-metadata==4.11.2
+importlib-resources==5.4.0
+ipykernel==6.9.1
+ipython==8.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
+libclang==13.0.0
+locket==0.2.0
+mahotas==1.4.11
+Markdown==3.3.6
+MarkupSafe==2.1.0
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+munkres==1.1.4
+mypy-extensions==0.4.3
+nbclient==0.5.12
+nbconvert==6.4.2
+nbformat==5.1.3
+nest-asyncio==1.5.4
+networkx==2.7.1
+notebook==6.4.8
+numpy==1.21.5
+oauthlib==3.2.0
+opencv-python==4.5.5.64
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.1
+pandocfilters==1.5.0
+parso==0.8.3
+partd==1.2.0
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.0
+pip==22.0.4
+platformdirs==2.5.1
+prometheus-client==0.13.1
+promise==2.3
+prompt-toolkit==3.0.27
+protobuf==3.19.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.7
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-Levenshtein==0.12.2
+pytz==2021.3
+PyWavelets==1.3.0
+PyYAML==6.0
+pyzmq==22.3.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-image==0.19.2
+scikit-learn==1.0.2
+scipy==1.8.0
+seaborn==0.11.2
+Send2Trash==1.8.0
+setuptools==60.9.3
+six==1.16.0
+stack-data==0.2.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow-addons==0.16.1
+tensorflow-datasets==4.5.2
+tensorflow-macos==2.8.0
+tensorflow-metadata==1.7.0
+tensorflow-metal==0.4.0
+termcolor==1.1.0
+terminado==0.13.3
+testpath==0.6.0
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
+tifffile==2022.3.25
+tomli==2.0.1
+toolz==0.11.2
+torch==1.11.0
+tornado==6.1
+tqdm==4.63.0
+traitlets==5.1.1
+typeguard==2.13.3
+typing_extensions==4.1.1
+unicodedata2==14.0.0
+urllib3==1.26.8
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.3
+wheel==0.37.1
+widgetsnbextension==3.5.2
+wrapt==1.13.3
+zipp==3.7.0
